<resources>
    <string name="app_name">Puzzle</string>
    <string name="action_settings">Settings</string>
    <string name="zero">zero.png</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="six">six</string>
    <string name="seven">seven</string>
    <string name="eight">eight</string>
    <string name="sort">sort</string>
    <string name="shuffle">Shuffle</string>
</resources>
