<?xml version="1.0" encoding="utf-8" ?>
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="se.puzzle.MainActivity"
    android:background="#ffffff">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zero"
        android:layout_marginTop="45dp"
        android:src="@drawable/zero"
        android:contentDescription="@string/zero"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="54dp"
        android:layout_marginStart="54dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/one"
        android:src="@drawable/one"
        android:contentDescription="@string/one"
        android:layout_alignTop="@+id/zero"
        android:layout_toRightOf="@+id/zero"
        android:layout_toEndOf="@+id/zero"
        android:layout_marginLeft="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/two"
        android:src="@drawable/two"
        android:contentDescription="@string/two"
        android:layout_alignTop="@+id/one"
        android:layout_toRightOf="@+id/one"
        android:layout_toEndOf="@+id/one"
        android:layout_marginLeft="5dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/three"
        android:src="@drawable/three"
        android:layout_below="@+id/zero"
        android:layout_alignLeft="@+id/zero"
        android:layout_alignStart="@+id/zero"
        android:contentDescription="@string/three"
        android:layout_marginTop="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/four"
        android:src="@drawable/four"
        android:layout_alignTop="@+id/three"
        android:layout_toRightOf="@+id/three"
        android:layout_toEndOf="@+id/three"
        android:contentDescription="@string/four"
        android:layout_marginLeft="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/five"
        android:src="@drawable/five"
        android:layout_alignTop="@+id/four"
        android:layout_toRightOf="@+id/four"
        android:layout_toEndOf="@+id/four"
        android:contentDescription="@string/five"
        android:layout_marginLeft="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/six"
        android:src="@drawable/six"
        android:layout_below="@+id/three"
        android:layout_alignLeft="@+id/three"
        android:layout_alignStart="@+id/three"
        android:contentDescription="@string/six"
        android:layout_marginTop="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seven"
        android:src="@drawable/seven"
        android:layout_alignTop="@+id/six"
        android:layout_toRightOf="@+id/six"
        android:layout_toEndOf="@+id/six"
        android:contentDescription="@string/seven"
        android:layout_marginLeft="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eight"
        android:src="@drawable/eight"
        android:layout_alignTop="@+id/seven"
        android:layout_toRightOf="@+id/seven"
        android:layout_toEndOf="@+id/seven"
        android:contentDescription="@string/eight"
        android:layout_marginLeft="5dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start"
        android:id="@+id/start"
        android:onClick="sort"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/eight"
        android:layout_toEndOf="@+id/eight" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shuffle"
        android:id="@+id/shuffle"
        android:onClick="shuffle"
        android:layout_alignBottom="@+id/start"
        android:layout_toLeftOf="@+id/start"
        android:layout_toStartOf="@+id/start" />
</RelativeLayout>